background image & page links added

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url("./images/burger.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .nav-link {
     color: white;
 }
