--- a/views/tables.html
+++ b/views/tables.html
@@ -7,7 +7,7 @@
   <title>Waitlist</title>
   <!-- CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/tables.css">
+  <link rel="stylesheet" href="css/tables.css" type='text/css'>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Bootstrap JS -->
