--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,6 +2,10 @@
     color: white;
 }
 
+h1 {
+    color: white;
+}
+
 .hero {
     /* Flexbox stuff */
     display: flex;
@@ -16,7 +20,7 @@
     text-align: center;
 
     /* Background styles */
-    background-image: url("../images/burger.jpg");
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/burger.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
