--- a/views/home.html
+++ b/views/home.html
@@ -16,24 +16,20 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand text-warning" href="/">Sunny Grill</a>
+        <a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
         <ul class="nav justify-content-end mr-3">
             <li class="nav-item active">
               <a class="nav-link" href="/">Home</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Reservations
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/reservations">Make a Reservation</a>
-                  <a class="dropdown-item" href="/tables">View Waitlist</a>
-                </div>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/tables">Waitlist</a>
+            </li>
           </ul>
     </nav>
     <section class="hero">
         <div class="hero-inner">
+          <h1>Your stomach called. Feed it.</h1>
+          <a type="button" href="/reservations" class="btn btn-danger" role="button">Find a Table</a>
         </div>
     </section>
 </body>
