--- a/views/reso.html
+++ b/views/reso.html
@@ -2,96 +2,97 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Reservations</title>
-  <!-- CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/reso.css" type='text/css'>
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+	<title>Reservations</title>
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/reso.css" type='text/css'>
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
-    <ul class="nav justify-content-end mr-3">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/tables">Waitlist</a>
-      </li>
-    </ul>
-  </nav>
-  <section class="hero">
-    <div class="hero-inner">
-      <div class="card">
-        <div class="card-header text-center">
-          <h5>Dining with us tonight? <br> Please enter your information below and we'll find a table for you as soon as
-            possible.</h5>
-        </div>
-        <div class="card-body">
-          <form>
-            <div class="form-group">
-              <label for="reserve-name">Name</label>
-              <input type="text" class="form-control" id="reserve-name">
-            </div>
-            <div class="form-group">
-              <label for="reserve-size">Party size</label>
-              <input type="number" class="form-control" id="reserve-size">
-            </div>
-            <div class="form-group">
-              <label for="reserve-phone">Phone Number</label>
-              <input type="tel" class="form-control" id="reserve-phone">
-            </div>
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary submit">Find Table</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
+	<nav class="navbar navbar-dark bg-dark fixed-top">
+		<a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
+		<ul class="nav justify-content-end mr-3">
+			<li class="nav-item active">
+				<a class="nav-link" href="/">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/tables">Waitlist</a>
+			</li>
+		</ul>
+	</nav>
+	<section class="hero">
+		<div class="hero-inner">
+			<div class="card">
+				<div class="card-header text-center">
+					<h5>Dining with us tonight? <br> Please enter your information below and we'll find a table for you
+						as soon as
+						possible.</h5>
+				</div>
+				<div class="card-body">
+					<form>
+						<div class="form-group">
+							<label for="reserve-name">Name</label>
+							<input type="text" class="form-control" id="reserve-name">
+						</div>
+						<div class="form-group">
+							<label for="reserve-size">Party size</label>
+							<input type="number" class="form-control" id="reserve-size">
+						</div>
+						<div class="form-group">
+							<label for="reserve-phone">Phone Number</label>
+							<input type="tel" class="form-control" id="reserve-phone">
+						</div>
+						<div class="text-center">
+							<button type="submit" class="btn btn-primary submit">Find Table</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
 
 <script type="text/javascript">
 
-  // Front-end JacaSCript that POSTs our form data to our express server
-  $(".submit").on("click", (event) => {
-    event.preventDefault();
+	// Front-end JacaSCript that POSTs our form data to our express server
+	$(".submit").on("click", (event) => {
+		event.preventDefault();
 
-    // Grabs the form elements and puts them in object
-    let newReservation = {
-      name: $("#reserve-name").val().trim(),
-      size: $("#reserve-size").val().trim(),
-      phone: $("#reserve-phone").val().trim()
-    };
+		// Grabs the form elements and puts them in object
+		let newReservation = {
+			name: $("#reserve-name").val().trim(),
+			size: $("#reserve-size").val().trim(),
+			phone: $("#reserve-phone").val().trim()
+		};
 
-    console.log(newReservation);
+		console.log(newReservation);
 
-    // Give URL and object we want to send, with callback that returns true or false if a table is available
-    // Similar to AJAX call 
-    $.post("/api/tables", newReservation, data => {
-      if (data) {
-        alert("Your table is ready, please visit the host stand to be seated");
-      }
+		// Give URL and object we want to send, with callback that returns true or false if a table is available
+		// Similar to AJAX call 
+		$.post("/api/tables", newReservation, data => {
+			if (data) {
+				alert("Your table is ready, please visit the host stand to be seated");
+			}
 
-      else {
-        alert("You are on the waitlist, we will text when your table is ready");
-      }
+			else {
+				alert("You are on the waitlist, we will text when your table is ready");
+			}
 
-      // Clear form after submitting
-      $("#reserve-name").val("");
-      $("#reserve-size").val("");
-      $("#reserve-phone").val("");
+			// Clear form after submitting
+			$("#reserve-name").val("");
+			$("#reserve-size").val("");
+			$("#reserve-phone").val("");
 
-    });
+		});
 
-  });
+	});
 
 </script>
