--- a/views/tables.html
+++ b/views/tables.html
@@ -2,113 +2,113 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Waitlist</title>
-  <!-- CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/tables.css" type='text/css'>
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+	<title>Waitlist</title>
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/tables.css" type='text/css'>
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
-    <ul class="nav justify-content-end mr-3">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/tables">Waitlist</a>
-      </li>
-    </ul>
-  </nav>
-  <section class="hero">
-    <div class="hero-inner">
-      <!-- Current Tables in Use -->
-      <div class="card table-card">
-        <div class="card-header">
-          <h4>Current Reservations</h4>
-        </div>
-        <div class="card-body">
-          <ul id="tableList" class="list-group"></ul>
-        </div>
-      </div>
-
-      <!-- Wait List -->
-      <div class="card table-card">
-        <div class="card-header">
-          <h4>Waiting List</h4>
-        </div>
-        <div class="card-body">
-          <ul id="waitList" class="list-group"></ul>
-        </div>
-      </div>
-
-    </div>
-  </section>
+	<nav class="navbar navbar-dark bg-dark fixed-top">
+		<a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
+		<ul class="nav justify-content-end mr-3">
+			<li class="nav-item active">
+				<a class="nav-link" href="/">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/tables">Waitlist</a>
+			</li>
+		</ul>
+	</nav>
+	<section class="hero">
+		<div class="row justify-content-center">
+			<!-- Current Tables in Use -->
+			<div class="col-4">
+				<div class="card text-center">
+					<div class="card-header">
+						<h4>Current Reservations</h4>
+					</div>
+					<div class="card-body overflow-auto">
+						<ul id="tableList" class="list-group"></ul>
+					</div>
+				</div>
+			</div>
+			<!-- Wait List -->
+			<div class="col-4">
+				<div class="card text-center">
+					<div class="card-header">
+						<h4>Waiting List</h4>
+					</div>
+					<div class="card-body overflow-auto">
+						<ul id="waitList" class="list-group"></ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
 
 <script type="text/javascript">
 
-  function runTableQuery() {
-    // Ajax function uses URL of API to GET data 
-    $.ajax({ url: "/api/tables", method: "GET" })
-      .then(tableData => {
+	function runTableQuery() {
+		// Ajax function uses URL of API to GET data 
+		$.ajax({ url: "/api/tables", method: "GET" })
+			.then(tableData => {
 
-        // display data as object
-        console.log(tableData);
-        console.log("------------------------------------");
+				// display data as object
+				console.log(tableData);
+				console.log("------------------------------------");
 
-        // Loop through each reservation
-        for (let i = 0; i < tableData.length; i++) {
-          let tableList = $("#tableList");
-          let listItem = $("<li class='list-group-item mt-4'>");
+				// Loop through each reservation
+				for (let i = 0; i < tableData.length; i++) {
+					let tableList = $("#tableList");
+					let listItem = $("<li class='list-group-item mt-3'>");
 
-          listItem.append(
-              $("<h2>").text("Table #" + (i + 1)),
-              $("<hr>"),
-              $("<h2>").text("Name: " + tableData[i].name),
-              $("<h2>").text("Party Size: " + tableData[i].size)
-            );
+					listItem.append(
+						$("<h4>").text("Table #" + (i + 1)),
+						$("<h5>").text("Name: " + tableData[i].name),
+						$("<h5>").text("Party Size: " + tableData[i].size)
+					);
 
-          tableList.append(listItem);
-        }
-      });
-  };
+					tableList.append(listItem);
+				}
+			});
+	};
 
-  function runWaitlistQuery() {
-    // Ajax funciton uses URL of API to GET data 
-    $.ajax({ url: "/api/waitlist", method: "GET" })
-      .then(waitData => {
+	function runWaitlistQuery() {
+		// Ajax funciton uses URL of API to GET data 
+		$.ajax({ url: "/api/waitlist", method: "GET" })
+			.then(waitData => {
 
-        // display data as object
-        console.log(waitData);
-        console.log("------------------------------------");
+				// display data as object
+				console.log(waitData);
+				console.log("------------------------------------");
 
-        // Loop through each reservation
-        for (let i = 0; i < waitData.length; i++) {
-          let tableList = $("#waitList");
-          let listItem = $("<li class='list-group-item mt-4'>");
+				// Loop through each reservation
+				for (let i = 0; i < waitData.length; i++) {
+					let waitList = $("#waitList");
+					let listItem = $("<li class='list-group-item mt-3'>");
 
-          listItem.append(
-              $("h2>").text("Table #" + (i + 1)),
-              $("<hr>"),
-              $("<h2>").text("Name: " + tableData[i].name),
-              $("<h2>").text("Party Size: " + tableData[i].size)
-            );
+					listItem.append(
+						$("<h4>").text("Table #" + (i + 1)),
+						$("<h5>").text("Name: " + waitData[i].name),
+						$("<h5>").text("Party Size: " + waitData[i].size)
+					);
 
-          waitList.append(listItem);
-        }
-      });
-  };
+					waitList.append(listItem);
+				}
+			});
+	};
 
-  runTableQuery();
-  runWaitlistQuery();
+	runTableQuery();
+	runWaitlistQuery();
 
 </script>
