Logo Added to Nav bar

--- a/views/reso.html
+++ b/views/reso.html
@@ -16,7 +16,9 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-dark fixed-top">
-		<a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
+		<a href="/">
+			<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="200px" height= "auto">
+		</a>
 		<ul class="nav justify-content-end mr-3">
 			<li class="nav-item active">
 				<a class="nav-link" href="/">Home</a>
@@ -30,9 +32,8 @@
 		<div class="hero-inner">
 			<div class="card">
 				<div class="card-header text-center">
-					<h5>Dining with us tonight? <br> Please enter your information below and we'll find a table for you
-						as soon as
-						possible.</h5>
+					<h5>Dining with us tonight? <br> Please enter your information below and we'll find a table for you as soon as possible.
+					</h5>
 				</div>
 				<div class="card-body">
 					<form>
