--- a/views/tables.html
+++ b/views/tables.html
@@ -16,7 +16,9 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-dark fixed-top">
-		<a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
+		<a href="/">
+			<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="200px" height= "auto">
+		</a>
 		<ul class="nav justify-content-end mr-3">
 			<li class="nav-item active">
 				<a class="nav-link" href="/">Home</a>
@@ -29,7 +31,7 @@
 	<section class="hero">
 		<div class="row justify-content-center">
 			<!-- Current Tables in Use -->
-			<div class="col-4">
+			<div class="col-5">
 				<div class="card text-center">
 					<div class="card-header">
 						<h4>Current Reservations</h4>
@@ -40,7 +42,7 @@
 				</div>
 			</div>
 			<!-- Wait List -->
-			<div class="col-4">
+			<div class="col-5">
 				<div class="card text-center">
 					<div class="card-header">
 						<h4>Waiting List</h4>
