--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -2,6 +2,8 @@
     color: white;
 }
 
+
+
 .hero {
     /* Flexbox stuff */
     display: flex;
@@ -27,12 +29,13 @@
 .card {
     display: flex;
     margin: 15px;
-    height: 75vh;
+    max-height: 75vh;
 }
 
 .card-body {
     padding-top: 0;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    /* background-color: rgb(52,58,64); */
 }
 
 .card-body h4 {
@@ -43,4 +46,3 @@
 .card-body h5 {
     font-size: 1em;
 }
-
