--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,9 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-dark fixed-top">
-		<a class="navbar-brand text-warning" href="/">Feedlot Grill</a>
+		<a href="/">
+			<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="200px" height= "auto">
+		</a>
 		<ul class="nav justify-content-end mr-3">
 			<li class="nav-item active">
 				<a class="nav-link" href="/">Home</a>
@@ -29,6 +31,7 @@
 	<section class="hero">
 		<div class="hero-inner">
 			<h1>Your stomach called. Feed it.</h1>
+
 			<a type="button" href="/reservations" class="btn btn-danger" role="button">Find a Table</a>
 		</div>
 	</section>
