--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,9 +1,20 @@
+/***************************
+Navbar
+***************************/
 .nav-link {
     color: white;
 }
 
+.nav-link:hover {
+    color: #FEC85C;
+}
+
+/***************************
+Main Container
+***************************/
 h1 {
     color: white;
+    font-size: 2em;
 }
 
 .hero {
@@ -20,33 +31,48 @@ h1 {
     text-align: center;
 
     /* Background styles */
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/burger.jpg");
+    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../images/burger.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
 }
 
-/* Button Styling */
-/* .hero .btn {
-    Positioning and sizing
-    display: block;
-    width: 200px;
-    
-    Padding and margins
-    padding: 1em;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
+.btn {
+    background-color: rgb(242,39,3);
+}
 
-    Text styles
-    color: black;
-    text-decoration: none;
-    font-size: 1.5em;
-    
-    Border styles
-    border: 3px solid black;
-    border-radius: 20px;
-} */
+/***************************
+Media Queries
+***************************/
+/* Xtra Small Devices */
+@media (max-width: 346px) {
+    .navbar .container-fluid {
+        justify-content: center;
+    }
+ }
 
 
+/* Medium Devices */
+@media (min-width: 577px) and (max-width: 1024px) {
+    h1{ 
+        font-size: 3em;
+    }
+    .btn {
+        font-size: 1.5em;
+    }
+    .nav-link {
+        font-size: 1.5em;
+    }
+    nav img {
+        width: 250px;
+        margin: 5px;
+    }
+ }
+
+ /* Large Devices */
+ @media (min-width: 992px) { 
+    nav img {
+        width: 200px;
+    }
+ }
