--- a/views/home.html
+++ b/views/home.html
@@ -16,17 +16,16 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-dark fixed-top">
+		<div class="container-fluid">
 		<a href="/">
-			<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="200px" height= "auto">
+			<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="170px" height= "auto">
 		</a>
-		<ul class="nav justify-content-end mr-3">
-			<li class="nav-item active">
-				<a class="nav-link" href="/">Home</a>
-			</li>
+		<ul class="nav mr-3">
 			<li class="nav-item">
 				<a class="nav-link" href="/tables">Waitlist</a>
 			</li>
 		</ul>
+		</div>
 	</nav>
 	<section class="hero">
 		<div class="hero-inner">
