--- a/views/reso.html
+++ b/views/reso.html
@@ -16,17 +16,16 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-dark fixed-top">
-		<a href="/">
-			<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="200px" height= "auto">
-		</a>
-		<ul class="nav justify-content-end mr-3">
-			<li class="nav-item active">
-				<a class="nav-link" href="/">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/tables">Waitlist</a>
-			</li>
-		</ul>
+		<div class="container-fluid">
+			<a href="/">
+				<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="170px" height= "auto">
+			</a>
+			<ul class="nav mr-3">
+				<li class="nav-item">
+					<a class="nav-link" href="/tables">Waitlist</a>
+				</li>
+			</ul>
+			</div>
 	</nav>
 	<section class="hero">
 		<div class="hero-inner">
@@ -50,7 +49,7 @@
 							<input type="tel" class="form-control" id="reserve-phone">
 						</div>
 						<div class="text-center">
-							<button type="submit" class="btn btn-primary submit">Find Table</button>
+							<button type="submit" class="btn submit">Find Table</button>
 						</div>
 					</form>
 				</div>
