--- a/views/tables.html
+++ b/views/tables.html
@@ -16,22 +16,21 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-dark fixed-top">
-		<a href="/">
-			<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="200px" height= "auto">
-		</a>
-		<ul class="nav justify-content-end mr-3">
-			<li class="nav-item active">
-				<a class="nav-link" href="/">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/tables">Waitlist</a>
-			</li>
-		</ul>
+		<div class="container-fluid">
+			<a href="/">
+				<img class="navbar-brand" src="/images/logo-wide.png" alt="logo" width="170px" height= "auto">
+			</a>
+			<ul class="nav mr-3">
+				<li class="nav-item">
+					<a class="nav-link" href="/tables">Waitlist</a>
+				</li>
+			</ul>
+			</div>
 	</nav>
 	<section class="hero">
 		<div class="row justify-content-center">
 			<!-- Current Tables in Use -->
-			<div class="col-5">
+			<div class="col-xs-12 col-md-5 tables">
 				<div class="card text-center">
 					<div class="card-header">
 						<h4>Current Reservations</h4>
@@ -42,13 +41,17 @@
 				</div>
 			</div>
 			<!-- Wait List -->
-			<div class="col-5">
+			<div class="col-xs-12  col-md-5 tables">
 				<div class="card text-center">
 					<div class="card-header">
 						<h4>Waiting List</h4>
 					</div>
 					<div class="card-body overflow-auto">
-						<ul id="waitList" class="list-group"></ul>
+						<ul id="waitList" class="list-group">
+							<li id="noWaitlist" class='list-group-item mt-3'>
+								<h4>There is no waitlist at this time</h4>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -96,6 +99,7 @@
 
 				// Loop through each reservation
 				for (let i = 0; i < waitData.length; i++) {
+					$("#noWaitlist").hide();
 					let waitList = $("#waitList");
 					let listItem = $("<li class='list-group-item mt-3'>");
 
@@ -107,7 +111,7 @@
 
 					waitList.append(listItem);
 				}
-			});
+			})
 	};
 
 	runTableQuery();
